backup/kasten-k10/kasten-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    app: kasten-io
  name: kasten-io
  namespace: kasten-io
spec:
  ingressClassName: nginx
  rules:
  - host: kasten.lala-1992.xyz
    http:
      paths:
      - backend:
          service:
            name: gateway
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kasten.lala-1992.xyz
    secretName: kasten-io-k8s
